@@ -1,3 +1,10 @@
+2001-05-24  Elliot Glaysher  <nuriko.chan@home.com>
+
+	* comicpage (comic_selected_from_list): Now when clicked, downloads
+	today's comic for that comic.
+	(Display_comic): Commented code and added whitespace. If they suck let
+	me know (It's past midnight and I'm tired...)
+	
 2001-05-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
 	* Makefile (BUNDLERULES): Abstracted redundant code for creating
